# matrix_arithmetics

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  matrix.h
tests/: CMakeLists.txt  MainTest.cpp  MatrixTest.cpp
